fix : spacing ish

--- a/src/components/Repositories/index.scss
+++ b/src/components/Repositories/index.scss
@@ -4,10 +4,10 @@
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
   animation-duration: 0.2s;
-
   .app_wrapper {
-    padding-right: 115px;
-    padding-left: 115px;
+    .app_max_width {
+      max-width: 1216px;
+    }
   }
 }
 .repo_grid {
